// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot People > adding a registrar as root from the relay chain works > call add registrar with wrong origin 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000)",
          "refTime": "(rounded 300000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "No",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 100000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 3000)",
          "refTime": "(rounded 200000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot People > adding a registrar as root from the relay chain works > registrars after parachain block 1`] = `
[
  {
    "account": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    "fee": 1,
    "fields": 0,
  },
  {
    "account": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "fee": 0,
    "fields": 0,
  },
  {
    "account": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
    "fee": 0,
    "fields": 0,
  },
]
`;

exports[`Polkadot People > adding a registrar as root from the relay chain works > registrars after relay block 1`] = `
[
  {
    "account": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    "fee": 1,
    "fields": 0,
  },
  {
    "account": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "fee": 0,
    "fields": 0,
  },
]
`;

exports[`Polkadot People > adding a registrar as root from the relay chain works > registrars before relay block 1`] = `
[
  {
    "account": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    "fee": 1,
    "fields": 0,
  },
  {
    "account": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "fee": 0,
    "fields": 0,
  },
]
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > double judgment request events 1`] = `
[
  {
    "data": {
      "registrarIndex": 0,
      "who": "16D2eVuK5SWfwvtFD3gVdBC2nc2BafK31BY6PrbZHBAGew7L",
    },
    "method": "JudgementRequested",
    "section": "identity",
  },
  {
    "data": {
      "registrarIndex": 1,
      "who": "16D2eVuK5SWfwvtFD3gVdBC2nc2BafK31BY6PrbZHBAGew7L",
    },
    "method": "JudgementRequested",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > eve's judgements after one has been provided 1`] = `
[
  [
    0,
    {
      "reasonable": null,
    },
  ],
  [
    1,
    {
      "feePaid": 0,
    },
  ],
]
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > identity right after set identity 1`] = `
{
  "discord": {
    "raw": "0x746573745f646973636f7264",
  },
  "display": {
    "raw": "0x5465737420446973706c6179",
  },
  "email": {
    "raw": "0x746573745f6164647265737340746573742e696f",
  },
  "github": {
    "raw": "0x746573745f676974687562",
  },
  "image": {
    "raw": "0x74657374",
  },
  "legal": {
    "raw": "0x46697273744e616d65204c6173744e616d65",
  },
  "matrix": {
    "raw": "0x40746573743a746573745f7365727665722e696f",
  },
  "pgpFingerprint": "0x6131623263336434653566366737683869396a31",
  "twitter": {
    "raw": "0x40746573745f74776974746572",
  },
  "web": {
    "raw": "0x687474703a2f2f746573742e74652f6d65",
  },
}
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > judgement provision events 1`] = `
[
  {
    "data": {
      "registrarIndex": 0,
      "target": "16D2eVuK5SWfwvtFD3gVdBC2nc2BafK31BY6PrbZHBAGew7L",
    },
    "method": "JudgementGiven",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "16D2eVuK5SWfwvtFD3gVdBC2nc2BafK31BY6PrbZHBAGew7L",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > set identity twice events 1`] = `
[
  {
    "data": {
      "who": "16D2eVuK5SWfwvtFD3gVdBC2nc2BafK31BY6PrbZHBAGew7L",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity and requesting judgement should work > identity right after set identity 1`] = `
{
  "discord": {
    "raw": "0x746573745f646973636f7264",
  },
  "display": {
    "raw": "0x5465737420446973706c6179",
  },
  "email": {
    "raw": "0x746573745f6164647265737340746573742e696f",
  },
  "github": {
    "raw": "0x746573745f676974687562",
  },
  "image": {
    "raw": "0x74657374",
  },
  "legal": {
    "raw": "0x46697273744e616d65204c6173744e616d65",
  },
  "matrix": {
    "raw": "0x40746573743a746573745f7365727665722e696f",
  },
  "pgpFingerprint": "0x6131623263336434653566366737683869396a31",
  "twitter": {
    "raw": "0x40746573745f74776974746572",
  },
  "web": {
    "raw": "0x687474703a2f2f746573742e74652f6d65",
  },
}
`;

exports[`Polkadot People > setting on-chain identity and requesting judgement should work > judgement provision events 1`] = `
[
  {
    "data": {
      "registrarIndex": 0,
      "target": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "JudgementGiven",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity and requesting judgement should work > judgement request events 1`] = `
[
  {
    "data": {
      "registrarIndex": 0,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "JudgementRequested",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity and requesting judgement should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > alice's two subidentities 1`] = `
[
  4010600000,
  [
    "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
  ],
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > bob's superaccount data 1`] = `
[
  "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  {
    "raw": "0x626f62",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > carolus' superaccount data 1`] = `
[
  "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  {
    "raw": "0x6361726f6c7573",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > charlie's superaccount data 1`] = `
[
  "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  {
    "raw": "0x636861726c6965",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > quit subidentity events 1`] = `
[
  {
    "data": {
      "deposit": "(rounded 2000000000)",
      "main": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "sub": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "SubIdentityRevoked",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > remove subidentity events 1`] = `
[
  {
    "data": {
      "deposit": "(rounded 2000000000)",
      "main": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "sub": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
    },
    "method": "SubIdentityRemoved",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > rename subidentity events 1`] = `[]`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > set subidentities events 1`] = `[]`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > subidentity data after 1st subid removal 1`] = `
[
  2005300000,
  [
    "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
  ],
]
`;

exports[`Polkadot People > setting on-chain identity, requesting judgement, cancelling the request and then clearing the identity should work > cancel judgement events 1`] = `
[
  {
    "data": {
      "registrarIndex": 0,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "JudgementUnrequested",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, requesting judgement, cancelling the request and then clearing the identity should work > clear identity events 1`] = `
[
  {
    "data": {
      "deposit": "(rounded 2000000000)",
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "IdentityCleared",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, requesting judgement, cancelling the request and then clearing the identity should work > judgement request events 1`] = `
[
  {
    "data": {
      "registrarIndex": 0,
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "JudgementRequested",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, requesting judgement, cancelling the request and then clearing the identity should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;
